# tempest-tripleo-ui

./: .gitignore  .gitreview  .zuul.yaml  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
releasenotes/notes/: set-up-project-1f593fc4174758e6.yaml
releasenotes/source/: conf.py  index.rst
tempest_tripleo_ui/: alerts.py  base.py  browser.py  config.py  core.py  decorators.py  plugin.py  timer.py
tempest_tripleo_ui/models/: deployment.py  login.py  nodes.py  plans.py  validators.py
tempest_tripleo_ui/services/: browser.py  logger.py  timer.py
tempest_tripleo_ui/tests/scenario/: test_basic.py  test_deployment_page.py  test_nodes_pages.py  test_plans_page.py  test_validators.py
tempest_tripleo_ui/widgets/: deployment_page.py  login_page.py  nodes_page.py  plans_page.py  validators_page.py
