[metadata]
name = tempest-tripleo-ui
summary = Tempest Plugin for TripleO UI
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/tempest-tripleo-ui
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tempest_tripleo_ui

[entry_points]
tempest.test_plugins =
    tripleo_ui = tempest_tripleo_ui.plugin:TripleOUITempestPlugin